--- a/add_task.html
+++ b/add_task.html
@@ -185,7 +185,7 @@
                                     <p class="category" value="Technical Task" onclick="hide(event)">Technical Task</p>
                                 </li>
                                 <li class="options"  onclick="selectCategory(this)" >
-                                    <p value="User Story" onclick="hide(event)">User Story</p>
+                                    <p class="category"  value="User Story" onclick="hide(event)">User Story</p>
                                 </li>                
                                                             
                                         
