--- a/add_task.html
+++ b/add_task.html
@@ -87,8 +87,7 @@
                 
                 <div class="list"  class="hide">
                     <ul id="listContact" class="hide underListContact"> 
-                        <li id ="contactList" class="liContact optionsMarginTop">
-                        </li>                       
+                        <li id ="contactList" class="liContact optionsMarginTop"></li>                       
                     </ul>
                 </div>                                                                       
             </div>
@@ -186,7 +185,7 @@
                     </ul>                                                  
                 </div>                   
             </div>
-            
+
             <div class="subtasks">
                 <div class="textSubtasks">Subtasks</div>
                     <div class="subtasksFrame14" >
