--- a/add_task.html
+++ b/add_task.html
@@ -87,7 +87,7 @@
                 
                 <div class="list"  class="hide">
                     <ul id="listContact" class="hide underListContact"> 
-                        <li id ="contactList" class="liContact optionsMarginTop"></li>                       
+                        <li id ="contactList"></li>                       
                     </ul>
                 </div>                                                                       
             </div>
