--- a/add_task.html
+++ b/add_task.html
@@ -218,7 +218,7 @@
 
                                 <div id="vectorAndImgCheck"  class="vectorAndImgCheck d-none">
 
-                                    <div class="imgCancelContainer" id="imgCancelContainer" onclick="clearInputSubTask()">
+                                    <div class="imgCancelContainer" id="imgCancelContainer" onclick="hideVectorAndImgCheck()">
                                         <img class="imgCancel"  src="./assets/img/cancel.png">
                                         <img class="imgCancelHover" src="./assets/img/close hover.png">
                                     </div>
