--- a/add_task.html
+++ b/add_task.html
@@ -78,7 +78,8 @@
                 
                                         
                     <div class="categoryFrame74" id="assigned" onclick="hideAssigned(event)">
-                        <p>Select contacts to assign</p>
+                        <!-- <p>Select contacts to assign</p> -->
+                        <input type="text" id="searchContacts" placeholder="Select contacts to assign">
 
                         <div class ="imgArrows" id="imgArrows" onclick="hideAssigned(event)">
                             <img class="arrow_drop_down" src="./assets/img/arrow_drop_down.png"  id="arrowAssigned" onclick="hideAssigned(event)" > 
