--- a/add_task.html
+++ b/add_task.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/add_tasks.css">
     <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
     
     <!-- script -->
     <script src="./js/include.js"></script>
