--- a/help.html
+++ b/help.html
@@ -23,13 +23,22 @@
     <div w3-include-html="./assets/templates/header.html"></div>
     <div class="summaryMain" id="summaryMain">
     <div id="conten">
-      <div class="arrow-back">
-        <img onclick="closeHelp()" class="arrow-back-sign-up" src="./assets/img/arrow-left-line.svg" alt="arrowback" />
+      <div>
+        <img onclick="closeHelp()" class="arrow-back" src="./assets/img/arrow-left-line.svg" alt="arrowback" />
       </div>
       <div class="content-container">
       <h1 class="headline-legal-help-privacy">Help</h1>
-      <span>Welcome to the help page for <span class="blue-words">Join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.</span>
+      <span class="text">Welcome to the help page for <span class="blue-words">Join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what <span class="blue-words">Join</span> is, how it can benefit you, and how to use it.</span>
       <h2 class="second-headline-legal-help-privacy">What is Join?</h2>
+      <span class="text">
+        <span class="blue-words">Join</span> is a kanban-based project management tool designed and built by a group of dedicated students as part of their web development bootcamp at the Developer Akademie.
+      </span>
+      <span class="text">
+        Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit work-in-progress, and maximize efficiency (or flow). <span class="blue-words">Join</span> leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual interface.
+      </span>
+      <span class="text">
+        It is important to note that <span class="blue-words">Join</span> is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding <span class="blue-words">Join</span>.
+      </span>
     </div>
   </div>
 </body>
