--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/contacts.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/fonts.css" />
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/contacts.js"></script>
@@ -17,7 +18,7 @@
     <div w3-include-html="assets/templates/header.html"></div>
 
     <!--add contact popup-->
-    <div class="addContactPopup d-none" id="addContact">
+    <div class="addContactPopup slide-left d-none" id="addContact">
         <div class="addContactMain">
             <div class="addContactLeft">
                 <img class="addContactLogo" src="./assets/img/logo-white.svg">
@@ -65,7 +66,7 @@
     </div>
 
     <!--edit contact popup-->
-    <div class="editContactPopup d-none" id="editContact">
+    <div class="editContactPopup d-none slide-left" id="editContact">
         <div class="editContactMain">
             <div class="editContactLeft">
                 <img class="editContactLogo" src="./assets/img/logo-white.svg">
@@ -105,7 +106,7 @@
                 <div class="line"></div>
                 <h3>Better with a team</h3>
             </div>
-            <div class="contactCard" id="contactCard">
+            <div class="contactCard slide-left-3" id="contactCard">
                 <div class="contactTitle">
                     <div class="circleCard d-none" id="circleCard"></div>
                     <div class="contactNameButtons">
