--- a/contacts.html
+++ b/contacts.html
@@ -35,15 +35,15 @@
                             <div class="close-img-div"><img class="close-img" src="./assets/img/cancel.png" onclick="closeAddContact()"></div>
                             <div class="input">
                                 <div class="inputFieldName">
-                                    <input class="inputField" type="text" placeholder="Name"> 
+                                    <input class="inputField" id="1" type="text" placeholder="Name"> 
                                     <img class="logo-edit-input" src="./assets/img/person_add_contact.png">
                                 </div>
                                 <div class="inputFieldName">
-                                    <input class="inputField" type="email"placeholder="Email"> 
+                                    <input class="inputField" id="2" type="email"placeholder="Email"> 
                                     <img class="logo-edit-input" src="./assets/img/mail_add_contact.png">
                                 </div>
                                 <div class="inputFieldName">
-                                    <input class="inputField" type="tel" placeholder="Phone"> 
+                                    <input class="inputField" id="3" type="tel" placeholder="Phone"> 
                                     <img class="logo-edit-input" src="./assets/img/call_add_contact.png">
                                 </div>
                             </div>
