--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
                                     <div class="cancel-text">Cancel</div>
                                     <div><img class="cancel-img" src="./assets/img/cancel.png"></div>
                                 </button>
-                                <button class="createButton" onclick="createContact()">
+                                <button class="createButton" onclick="createContact(event)">
                                     <div class="create-button-div">
                                     <div class="create-text">Create Contact</div>
                                     <div><img class="create-img" src="./assets/img/check.png"></div>
