update add contact

--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
     <div w3-include-html="assets/templates/header.html"></div>
 
     <!--add contact popup-->
-    <div class="addContactPopup slide-left d-none" id="addContact">
+    <div class="addContactPopup d-none" id="addContact">
         <div class="addContactMain">
             <div class="addContactLeft">
                 <img class="addContactLogo" src="./assets/img/logo-white.svg">
@@ -66,7 +66,7 @@
     </div>
 
     <!--edit contact popup-->
-    <div class="editContactPopup d-none slide-left" id="editContact">
+    <div class="editContactPopup d-none" id="editContact">
         <div class="editContactMain">
             <div class="editContactLeft">
                 <img class="editContactLogo" src="./assets/img/logo-white.svg">
@@ -106,7 +106,7 @@
                 <div class="line"></div>
                 <h3>Better with a team</h3>
             </div>
-            <div class="contactCard slide-left-3" id="contactCard">
+            <div class="contactCard" id="contactCard">
                 <div class="contactTitle">
                     <div class="circleCard d-none" id="circleCard"></div>
                     <div class="contactNameButtons">
@@ -119,6 +119,8 @@
                 <div class="emailCard" id="emailCard"></div>
                 <div class="phoneCard" id="phoneCard"></div>
             </div>
+        </div>
+        <div class="success">Contact successfully created</div>
         </div>
     </div>
 
