--- a/contacts.html
+++ b/contacts.html
@@ -35,15 +35,15 @@
                             <div class="close-img-div"><img class="close-img" src="./assets/img/cancel.png" onclick="closeAddContact()"></div>
                             <div class="input">
                                 <div class="inputFieldName">
-                                    <input class="inputField" id="1" type="text" placeholder="Name"> 
+                                    <input class="inputField" minlength="5" required id="1" type="text" placeholder="Name"> 
                                     <img class="logo-edit-input" src="./assets/img/person_add_contact.png">
                                 </div>
                                 <div class="inputFieldName">
-                                    <input class="inputField" id="2" type="email"placeholder="Email"> 
+                                    <input class="inputField" minlength="5" required id="2" type="email"placeholder="Email"> 
                                     <img class="logo-edit-input" src="./assets/img/mail_add_contact.png">
                                 </div>
                                 <div class="inputFieldName">
-                                    <input class="inputField" id="3" type="tel" placeholder="Phone"> 
+                                    <input class="inputField" minlength="5" required id="3" type="tel" placeholder="Phone"> 
                                     <img class="logo-edit-input" src="./assets/img/call_add_contact.png">
                                 </div>
                             </div>
@@ -53,7 +53,7 @@
                                     <div class="cancel-text">Cancel</div>
                                     <div><img class="cancel-img" src="./assets/img/cancel.png"></div>
                                 </button>
-                                <button class="createButton" onclick="createContact(event)">
+                                <button type="submit" class="createButton" onclick="createContact(event)">
                                     <div class="create-button-div">
                                     <div class="create-text">Create Contact</div>
                                     <div><img class="create-img" src="./assets/img/check.png"></div>
@@ -120,7 +120,7 @@
                 <div class="phoneCard" id="phoneCard"></div>
             </div>
         </div>
-        <div class="success">Contact successfully created</div>
+        <div class="success d-none" id="success">Contact successfully created</div>
         </div>
     </div>
 
