--- a/add_task.html
+++ b/add_task.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <!-- <link rel="stylesheet" href="./styles/sidebar.css"> -->
     <link rel="stylesheet" href="./styles/add_tasks.css">
+    <link rel="stylesheet" href="./styles/add_tasks_mediaQuery.css">
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
     
