--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -99,13 +99,39 @@
             <h3>Hinweis zur verantwortlichen Stelle</h3>
             <p>Die verantwortliche Stelle f&uuml;r die Datenverarbeitung auf dieser Website ist:</p>
             <p>
-              Silvan Stuber<br />
-              Bernstrasse 46<br />
-              3267 Seedorf
+              Hilal Yozkoyunu <br />
+              Beethovenstr. 26 <br />
+              69502 Hemsbach
             </p>
 
             <p>
-              Telefon: +41784053164<br />
+              E-Mail: hilal_2501@hotmail.de
+            </p>
+            <p>
+              *************<br />
+              *********<br />
+              ********
+            </p>
+
+            <p>
+              E-Mail: **********************
+            </p>
+            <p>
+              *************<br />
+              *********<br />
+              ********
+            </p>
+
+            <p>
+              E-Mail: **********************
+            </p>
+            <p>
+              Silvan Stuber<br />
+              Bernstrasse 46<br />
+              3267 Seedorf CH
+            </p>
+
+            <p>
               E-Mail: silvan.stuber1@gmail.com
             </p>
             <p>
