imprint data supplemented

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -31,15 +31,15 @@
           <div class="text">
             <li>Hilal Yozkoyunu</li>
             <li>Beethovenstr. 26</li>
-            <li>69502 Hemsbach</li>
+            <li>69502 Hemsbach DE</li>
             <br />
-            <li>*****</li>
-            <li>*****</li>
-            <li>*****</li>
+            <li>Barbara De Melo Mauricio</li>
+            <li>Ulrichsbergstrasse 3</li>
+            <li>81673 München DE</li>
             <br />
-            <li>*****</li>
-            <li>*****</li>
-            <li>*****</li>
+            <li>Bekir Labjani</li>
+            <li>Fröchlichgasse 62</li>
+            <li>8010 Graz AUT</li>
             <br />
             <li>Silvan Stuber</li>
             <li>Bernstrass 46</li>
@@ -48,8 +48,8 @@
           <h3>Exploring the Board</h3>
           <div class="text">
             <li>Email: hilal_2501@hotmail.de</li>
-            <li>Email:</li>
-            <li>Email:</li>
+            <li>Email: bardemelo@yahoo.de</li>
+            <li>Email: Business.life.bekir@gmail.com</li>
             <li>Email: silvan.stuber1@gmail.com</li>
           </div>
           <h3>Acceptance of terms</h3>
