--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -101,29 +101,29 @@
             <p>
               Hilal Yozkoyunu <br />
               Beethovenstr. 26 <br />
-              69502 Hemsbach
+              69502 Hemsbach DE
             </p>
 
             <p>
               E-Mail: hilal_2501@hotmail.de
             </p>
             <p>
-              *************<br />
-              *********<br />
-              ********
+              Barbara De Melo Mauricio<br />
+              Ulrichsbergstrasse 3<br />
+              81673 München DE
             </p>
 
             <p>
-              E-Mail: **********************
+              E-Mail: bardemelo@yahoo.de
             </p>
             <p>
-              *************<br />
-              *********<br />
-              ********
+              Bekir Labjani<br />
+              Fröchlichgasse 62<br />
+              8010 Graz AUT
             </p>
 
             <p>
-              E-Mail: **********************
+              E-Mail: Business.life.bekir@gmail.com 
             </p>
             <p>
               Silvan Stuber<br />
