sidebar and header add

--- a/add_task.html
+++ b/add_task.html
@@ -6,6 +6,7 @@
     <title>Join-Add-Task</title>
     <!-- Css Link -->
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
     <!-- <link rel="stylesheet" href="./styles/sidebar.css"> -->
     <link rel="stylesheet" href="./styles/add_tasks.css">
     <link rel="stylesheet" href="./styles/add_tasks_mediaQuery.css">
@@ -18,6 +19,7 @@
     <script src="./js/add_tasks.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/contacts.js"></script>
+    <script src="./js/include.js"></script>
    
    
 </head>
