--- a/add_task.html
+++ b/add_task.html
@@ -6,7 +6,7 @@
     <title>Join-Add-Task</title>
     <!-- Css Link -->
     <link rel="stylesheet" href="./styles/header.css">
-    <!-- <link rel="stylesheet" href="./styles/sidebar.css"> -->
+    <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/add_tasks.css">
     <link rel="stylesheet" href="./styles/add_tasks_mediaQuery.css">
     <link rel="stylesheet" href="./styles/fonts.css">
