--- a/add_task.html
+++ b/add_task.html
@@ -281,10 +281,12 @@
                     </div>
 
                 </div>
-                <div class="primary">
-                    <div class="textCreateTask" onclick="addTask()">Create task</div>
-                    <img class="imgCheckBlack" src="./assets/img/check.png" alt="">              
-                </div>
+                <a class="leadsToBoard" href="./board.html" id="leadsToBoard" onclick="handleTaskClick(event)">
+                    <div class="primary">
+                        <div class="textCreateTask">Create task</div>
+                        <img class="imgCheckBlack" src="./assets/img/check.png" alt="">              
+                    </div>
+                </a>
             </div>
         </div>
 </body>
