--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -10,6 +10,7 @@
       <script src="./js/header.js"></script>
       <script src="./js/register.js"></script>
       <script src="./js/legal_help_privacy.js"></script>
+      <script src="./js/legal_help_privacy_HTML.js"></script>
 
       <!-- styles -->
       <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg" />
@@ -22,7 +23,7 @@
       <div w3-include-html="./assets/templates/sidebar.html"></div>
       <div w3-include-html="./assets/templates/header.html"></div>
       <div>
-        
+
       </div>
     </body>
   </html>
