--- a/summary.html
+++ b/summary.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/summary.css ">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/legal_help_privacy.css"/>
     <!-- main Script -->
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/loginpage.js"></script>
     <script src="./js/summary.js"></script>
     <script src="./js/register.js"></script>
+    <script src="./js/legal_help_privacy.js"></script>
+    <script src="./js/legal_help_privacy_HTML.js"></script>
 
 
 </head>
@@ -22,6 +25,9 @@
 <body onload="summraryInit()" onclick="closeSubmenu()">
     <div w3-include-html="./assets/templates/sidebar.html"></div>
     <div w3-include-html="./assets/templates/header.html"></div>
+    <div id="contentJoin">
+
+    </div>
     <div class="summaryMain" id="summaryMain">
         <div class="summaryContainer">
             <div class="summaryLeft">
