--- a/summary.html
+++ b/summary.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="./styles/summary.css ">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/legal_help_privacy.css"/>
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
+    <link rel="stylesheet" href="./styles/add_tasks.css">
+    <link rel="stylesheet" href="./styles/add_tasks_mediaQuery.css">
+    <link rel="stylesheet" href="./styles/fonts.css">
     <!-- main Script -->
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
@@ -18,7 +22,9 @@
     <script src="./js/register.js"></script>
     <script src="./js/legal_help_privacy.js"></script>
     <script src="./js/legal_help_privacy_HTML.js"></script>
-
+    <script src="./js/add_tasks.js"></script>
+    <script src="./js/contacts.js"></script> 
+    <script src="add_task.html"></script>
 
 </head>
 
