--- a/summary.html
+++ b/summary.html
@@ -24,7 +24,7 @@
     <script src="./js/legal_help_privacy_HTML.js"></script>
     <script src="./js/add_tasks.js"></script>
     <script src="./js/contacts.js"></script> 
-    <script src="add_task.html"></script>
+    <script src="./js/add_task_HTML.js"></script>
 
 </head>
 
