--- a/add_task.html
+++ b/add_task.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="description_v1">
-                    <div class="description">Description</div> 
+                    <div class="description">Description<span class="spanClass">*</span></div> 
             
                     <div class="frame207" onclick="required(this)">
                     <div class="frame17">
