--- a/summary.html
+++ b/summary.html
@@ -26,6 +26,8 @@
     <script src="./js/add_tasks.js"></script>   
     <script src="./js/add_task_HTML.js"></script>
     <script src="./js/summary_HTML.js"></script>
+    <script src="./js/board.js"></script>
+    <script src="./js/board_HTML.js"></script>
 
 
 </head>
