change name render function to rendertTask()

--- a/add_task.html
+++ b/add_task.html
@@ -21,7 +21,7 @@
    
 </head>
 
-<body onload="addTaskInit(); render()">   
+<body onload="addTaskInit(); renderTask()">   
 
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <div w3-include-html="assets/templates/header.html"></div>
