--- a/board.html
+++ b/board.html
@@ -14,13 +14,14 @@
     <script src="./js/header.js"></script>
     <script src="./js/include.js"></script>
     <script src="./js/add_tasks.js"></script>
+    <script src="./js/board_HTML.js"></script>
 
 </head>
 
 <body onload="boardInit()">
     <div w3-include-html="./assets/templates/sidebar.html"></div>
     <div w3-include-html="./assets/templates/header.html"></div>
-
+<div id="contentJoin"></div>
 
    
 
