--- a/summary.html
+++ b/summary.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/summary.css ">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/board.css">
     <link rel="stylesheet" href="./styles/legal_help_privacy.css"/>
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
     <link rel="stylesheet" href="./styles/add_tasks.css">
