--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,9 @@
                 <div class="line3"></div>
             </div>
             <div class="addContactMiddle">
-                <div class="editCircle"></div>
+                <div class="addCircle" id="addCircle">
+                    <img src="./assets/img/person_add_contact.png">
+                </div>
             </div>
             <div class="addContactRight">
                     <div class="formDiv">
