--- a/summary.html
+++ b/summary.html
@@ -30,6 +30,7 @@
     <script src="./js/summary_HTML.js"></script>
     <script src="./js/board.js"></script>
     <script src="./js/board_HTML.js"></script>
+    <script scr="./js/sidebar_HTML.js"></script>
 
 
 </head>
