--- a/loginpage.html
+++ b/loginpage.html
@@ -18,10 +18,11 @@
     <link rel="stylesheet" href="./styles/loginpage.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
   </head>
-  <body onload="initLoading()">
+  <body class="body-background" onload="initLoading()">
     <div id="registerSuccessfullyContent"></div>
     <div class="animationJoinLogo">
-      <img class="join-logo" src="./assets/img/join-logo.svg" alt="" />
+      <img class="join-logo animated" src="./assets/img/join-logo.svg" alt="" />
+      <img class="join-logo-responsive animated" src="./assets/img/Capa 1.svg" alt="" />
     </div>
     <div class="logo-sign-up-container">
       <img class="jlogo" src="./assets/img/join-logo.svg" alt="" />
@@ -31,6 +32,10 @@
       <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
     </div>
     <div id="contentUserValidation">  
+    </div>
+    <div id="signUpButtonHeadline" class="sign-up-button-container-responsive">
+      <p>Not a Join user?</p>
+      <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
     </div>
     <div id="loginpageDataProtectionContainer" class="loginpage-data-protection-container">
       <span onclick="renderLogInPrivacyPolicyContent()" class="loginpage-data-protection-link">Privacy Policy</span>
