--- a/loginpage.html
+++ b/loginpage.html
@@ -33,7 +33,7 @@
     </div>
     <div id="contentUserValidation">  
     </div>
-    <div id="signUpButtonHeadline" class="sign-up-button-container-responsive">
+    <div id="signUpButtonResponsive" class="sign-up-button-container-responsive">
       <p>Not a Join user?</p>
       <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
     </div>
