--- a/loginpage.html
+++ b/loginpage.html
@@ -20,11 +20,11 @@
   </head>
   <body class="body-background" onload="initLoading()">
     <div id="registerSuccessfullyContent"></div>
-    <div class="animationJoinLogo">
+    <div id="animationJoinLogoContainer"class="animationJoinLogo">
       <img class="join-logo animated" src="./assets/img/join-logo.svg" alt="" />
       <img class="join-logo-responsive animated" src="./assets/img/Capa 1.svg" alt="" />
     </div>
-    <div class="logo-sign-up-container">
+    <div id="joinLogoContainer" class="logo-sign-up-container">
       <img class="jlogo" src="./assets/img/join-logo.svg" alt="" />
     </div>
     <div id="signUpButtonHeadline" class="sign-up-button-container">
