--- a/join.html
+++ b/join.html
@@ -25,6 +25,7 @@
     <script src="./js/legal_help_privacy.js"></script>
     <script src="./js/legal_help_privacy_HTML.js"></script>
     <script src="./js/contacts.js"></script>
+    <script src="./js/contacts_HTML.js"></script>
     <script src="./js/add_tasks.js"></script>   
     <script src="./js/add_task_HTML.js"></script>
     <script src="./js/summary_HTML.js"></script>
