change add task 198

--- a/loginpage.html
+++ b/loginpage.html
@@ -22,7 +22,7 @@
     <div id="registerSuccessfullyContent"></div>
     <div id="animationJoinLogoContainer"class="animationJoinLogo">
       <img class="join-logo animated" src="./assets/img/join-logo.svg" alt="" />
-      <img class="join-logo-responsive animated" src="./assets/img/Capa 1.svg" alt="" />
+      <img class="join-logo-responsive animated" src="./assets/img/join-logo-white.svg" alt="" />
     </div>
     <div id="joinLogoContainer" class="logo-sign-up-container">
       <img class="jlogo" src="./assets/img/join-logo.svg" alt="" />
