--- a/join.html
+++ b/join.html
@@ -31,6 +31,7 @@
     <script src="./js/summary_HTML.js"></script>
     <script src="./js/board.js"></script>
     <script src="./js/board_HTML.js"></script>
+    <script src="./js/editeAddTaskBord.js"></script>
 
 
 </head>
