--- a/join.html
+++ b/join.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles/add_tasks.css">
     <link rel="stylesheet" href="./styles/add_tasks_mediaQuery.css">
     <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/addPopUp.css">
     <!-- main Script -->
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
@@ -32,6 +33,7 @@
     <script src="./js/board.js"></script>
     <script src="./js/board_HTML.js"></script>
     <script src="./js/editeAddTaskBord.js"></script>
+    <script src="./js/addPopUp.js"></script>
   
 
 
