--- a/join.html
+++ b/join.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/summary.css ">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/board.css">
+    <link rel="stylesheet" href="./styles/boardResponisv.css">
     <link rel="stylesheet" href="./styles/contacts.css">
     <link rel="stylesheet" href="./styles/legal_help_privacy.css"/>
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
