--- a/loginpage.html
+++ b/loginpage.html
@@ -11,16 +11,16 @@
     <script src="./js/legal_help_privacy.js"></script>
     <script src="./js/legal_help_privacy_HTML.js"></script>
     <!-- styles -->
-    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
-    <link rel="stylesheet" href="./styles/sidebar.css">
-    <link rel="stylesheet" href="./styles/legal_help_privacy.css"/>
-    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg" />
+    <link rel="stylesheet" href="./styles/sidebar.css" />
+    <link rel="stylesheet" href="./styles/legal_help_privacy.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/loginpage.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
   </head>
   <body class="body-background" onload="initLoading()">
     <div id="registerSuccessfullyContent"></div>
-    <div id="animationJoinLogoContainer"class="animationJoinLogo">
+    <div id="animationJoinLogoContainer" class="animationJoinLogo">
       <img class="join-logo animated" src="./assets/img/join-logo.svg" alt="" />
       <img class="join-logo-responsive animated" src="./assets/img/join-logo-white.svg" alt="" />
     </div>
@@ -31,8 +31,7 @@
       <p>Not a Join user?</p>
       <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
     </div>
-    <div id="contentUserValidation">  
-    </div>
+    <div id="contentUserValidation"></div>
     <div id="signUpButtonResponsive" class="sign-up-button-container-responsive">
       <p>Not a Join user?</p>
       <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
