--- a/add_task.html
+++ b/add_task.html
@@ -7,12 +7,11 @@
     <!-- Css link -->
     <link rel="stylesheet" href="./styles/sidebar.css" />
     <link rel="stylesheet" href="./styles/header.css" />
-    <link rel="stylesheet" href="./styles/legal_help_privacy.css"/>
-    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
+    <link rel="stylesheet" href="./styles/legal_help_privacy.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg" />
     <link rel="stylesheet" href="./styles/add_tasks.css" />
     <link rel="stylesheet" href="./styles/add_tasks_responsive.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
-  
     <!-- main Script -->
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
@@ -29,7 +28,6 @@
     <script src="./js/edite_add_task_bord.js"></script>
     <script src="./js/add_pop_up.js"></script>
   </head>
-
   <body onload="addTaskInit()" onclick="closeSubmenu()">
     <div w3-include-html="./assets/templates/sidebar.html"></div>
     <div w3-include-html="./assets/templates/header.html"></div>
