--- a/summary.html
+++ b/summary.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="partingLine"></div>
                 <div class="deadline">
-                  <p id="dateSummary"><b></b></p>
+                  <p class="date-summary-text" id="dateSummary"><b></b></p>
                   <p class="deadLineText">Upcoming Deadline</p>
                 </div>
               </a>
