summary style greeting

--- a/summary.html
+++ b/summary.html
@@ -103,7 +103,7 @@
           </div>
           <div class="summaryRight">
             <div class="greetin">
-              <h2 id="greetingTextSummary"></h2>
+              <h2 id="greetingTextSummary" class="greeting-text-summary"></h2>
               <p id="userNameSummary" class="user-name"><b></b></p>
             </div>
           </div>
