--- a/summary.html
+++ b/summary.html
@@ -32,7 +32,7 @@
   <body onload="initSummary()" onclick="closeSubmenu()">
     <div w3-include-html="./assets/templates/sidebar.html"></div>
     <div w3-include-html="./assets/templates/header.html"></div>
-    <div class="summary-responsive-greeting animated">
+    <div class="summary-responsive-greeting animated" id="greetingBox">
       <div class="summary-responsive-greeting-headline">
         <div class="summary-responsive-greeting-text" id="greetingTextResponsive"></div>
         <div class="summary-responsive-greeting-name" id="userNameResponsive"></div>
