--- a/loginpage.html
+++ b/loginpage.html
@@ -10,6 +10,7 @@
     <script src="./js/register.js"></script>
     <script src="./js/legal_help_privacy.js"></script>
     <script src="./js/legal_help_privacy_HTML.js"></script>
+    <script src="./js/summary.js"></script>
     <!-- styles -->
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg" />
     <link rel="stylesheet" href="./styles/sidebar.css" />
